# memory

./: CMakeLists.txt
include/echo/: memory.h
include/echo/memory/: concept.h  copy.h  memory_backend_tag.h  memory_backend_traits.h  operation.h  simd_allocator.h  standard_memory_backend_tag.h  static_allocator.h  type.h
unittest/: concept_test.cpp  copy_test.cpp  memory_backend_traits_test.cpp  static_allocator_test.cpp  type_test.cpp
